--- a/scss/depfaces.scss
+++ b/scss/depfaces.scss
@@ -1,415 +1,38 @@
-/* this is definitely automatable */
+@use "textboxes" as *;
 
-article[who]::before {
-  background: url("/images/faces/Unknown.png") center/100% 100%;
-}
+@include character-face("Aimottle", "Angry", "Neutral", "Unsure");
 
-/* aimottle */
+@include character-face("Caina", "Concerned", "Disapproval", "Down", "Laugh", "Look", "Neutral", "Smile", "Sneer");
 
-article[who=aimottle]::before {
-  background-image: url("/images/faces/aimottle/Neutral.png");
-}
+@include character-face("Charles", "Look_Down", "Neutral", "Sweat_Drop");
 
-article[who=aimottle][emotion=angry]::before {
-  background-image: url("/images/faces/aimottle/Angry.png");
-}
+@include character-face("Claire", "Aghast", "Dizzy", "Happy", "Look", "Mad", "Neutral", "Pensive", "Sad", "Sigh");
 
-article[who=aimottle][emotion=neutral]::before {
-  background-image: url("/images/faces/aimottle/Neutral.png");
-}
+@include character-face("Dragon", "Dismiss", "Familiar", "Neutral", "Reveal", "Smile", "Stern");
 
-article[who=aimottle][emotion=unsure]::before {
-  background-image: url("/images/faces/aimottle/Unsure.png");
-}
+@include character-face("Este", "Stare");
 
-/* caina */
+@include many-character-faces("fountain", "Krys", "Lerias", "Zusy");
 
-article[who=caina]::before {
-  background-image: url("/images/faces/caina/Neutral.png");
-}
+@include character-face("HarP", "Excited", "Neutral");
 
-article[who=caina][emotion=concerned]::before {
-  background-image: url("/images/faces/caina/Concerned.png");
-}
+@include many-character-faces("hero", "ChosenOne", "Cleric", "Knight", "Rogue");
 
-article[who=caina][emotion=disapproval]::before {
-  background-image: url("/images/faces/caina/Disapproval.png");
-}
+@include character-face("Prince", "Appalled", "Head_Turn", "Look_Down", "Look", "Neutral");
 
-article[who=caina][emotion=down]::before {
-  background-image: url("/images/faces/caina/Down.png");
-}
+@include character-face("Tem", "Look_Down", "Neutral");
 
-article[who=caina][emotion=laugh]::before {
-  background-image: url("/images/faces/caina/Laugh.png");
-}
+@include character-face("Tigertaur", "Grin", "Neutral");
 
-article[who=caina][emotion=look]::before {
-  background-image: url("/images/faces/caina/Look.png");
-}
+@include character-face("Woof", "Awake", "KnockedOut", "Look", "Sleep");
 
-article[who=caina][emotion=neutral]::before {
-  background-image: url("/images/faces/caina/Neutral.png");
-}
+@include character-face("Yoki",
+  "Annoyed", "Disheartened", "Dizzy",
+  "Look", "Meditative", "Neutral", "Smile",
+  "Surprised", "Sweat_Drop", "Think",
+  "Unsure_Smile", "Unsure", "Upset"
+);
 
-article[who=caina][emotion=smile]::before {
-  background-image: url("/images/faces/caina/Smile.png");
-}
+@include character-face("YoungerYoki", "Concern", "Happy", "Look", "Neutral", "Sigh");
 
-article[who=caina][emotion=sneer]::before {
-  background-image: url("/images/faces/caina/Sneer.png");
-}
-
-/* charles */
-
-article[who=charles]::before {
-  background-image: url("/images/faces/charles/Neutral.png");
-}
-
-article[who=charles][emotion=look-down]::before,
-article[who=charles][emotion=look_down]::before {
-  background-image: url("/images/faces/charles/Look_Down.png");
-}
-
-article[who=charles][emotion=neutral]::before {
-  background-image: url("/images/faces/charles/Neutral.png");
-}
-
-article[who=charles][emotion=sweat-drop]::before,
-article[who=charles][emotion=sweat_drop]::before {
-  background-image: url("/images/faces/charles/Sweat_Drop.png");
-}
-
-/* claire */
-
-article[who=claire]::before {
-  background-image: url("/images/faces/claire/Neutral.png");
-}
-
-article[who=claire][emotion=aghast]::before {
-  background-image: url("/images/faces/claire/Aghast.png");
-}
-
-article[who=claire][emotion=dizzy]::before {
-  background-image: url("/images/faces/claire/Dizzy.png");
-}
-
-article[who=claire][emotion=happy]::before {
-  background-image: url("/images/faces/claire/Happy.png");
-}
-
-article[who=claire][emotion=look]::before {
-  background-image: url("/images/faces/claire/Look.png");
-}
-
-article[who=claire][emotion=mad]::before {
-  background-image: url("/images/faces/claire/Mad.png");
-}
-
-article[who=claire][emotion=neutral]::before {
-  background-image: url("/images/faces/claire/Neutral.png");
-}
-
-article[who=claire][emotion=down]::before,
-article[who=claire][emotion=pensive]::before {
-  background-image: url("/images/faces/claire/Pensive.png");
-}
-
-article[who=claire][emotion=sad]::before {
-  background-image: url("/images/faces/claire/Sad.png");
-}
-
-article[who=claire][emotion=sigh]::before {
-  background-image: url("/images/faces/claire/Sigh.png");
-}
-
-/* dragon */
-
-article[who=dragon]::before {
-  background-image: url("/images/faces/dragon/Neutral.png");
-}
-
-article[who=dragon][emotion=dismiss]::before {
-  background-image: url("/images/faces/dragon/Dismiss.png");
-}
-
-article[who=dragon][emotion=familiar]::before {
-  background-image: url("/images/faces/dragon/Familiar.png");
-}
-
-article[who=dragon][emotion=neutral]::before {
-  background-image: url("/images/faces/dragon/Neutral.png");
-}
-
-article[who=dragon][emotion=reveal]::before {
-  background-image: url("/images/faces/dragon/Reveal.png");
-}
-
-article[who=dragon][emotion=smile]::before {
-  background-image: url("/images/faces/dragon/Smile.png");
-}
-
-article[who=dragon][emotion=stern]::before {
-  background-image: url("/images/faces/dragon/Stern.png");
-}
-
-/* este */
-
-article[who=este]::before {
-  background-image: url("/images/faces/este/Stare.png");
-}
-
-article[who=este][emotion=portrait]::before,
-article[who=este][emotion=stare]::before {
-  background-image: url("/images/faces/este/Stare.png");
-}
-
-/* fountain kids */
-
-article[who=krys]::before {
-  background-image: url("/images/faces/fountain/Krys.png");
-}
-
-article[who=lerias]::before {
-  background-image: url("/images/faces/fountain/Lerias.png");
-}
-
-article[who=zusy]::before {
-  background-image: url("/images/faces/fountain/Zusy.png");
-}
-
-/* harp */
-
-article[who=harp]::before {
-  background-image: url("/images/faces/harp/Neutral.png");
-}
-
-article[who=harp][emotion=excited]::before {
-  background-image: url("/images/faces/harp/Excited.png");
-}
-
-article[who=harp][emotion=neutral]::before {
-  background-image: url("/images/faces/harp/Neutral.png");
-}
-
-/* heroes */
-
-article[who=chosenone]::before,
-article[who=chosen-one]::before,
-article[who=chosen_one]::before,
-article[who=hero][emotion=chosenone]::before {
-  background-image: url("/images/faces/hero/ChosenOne.png");
-}
-
-article[who=cleric]::before,
-article[who=hero][emotion=cleric]::before {
-  background-image: url("/images/faces/hero/Cleric.png");
-}
-
-article[who=knight]::before,
-article[who=hero][emotion=knight]::before {
-  background-image: url("/images/faces/hero/Knight.png");
-}
-
-article[who=rogue]::before,
-article[who=hero][emotion=rogue]::before {
-  background-image: url("/images/faces/hero/Rogue.png");
-}
-
-/* prince */
-
-article[who=prince]::before {
-  background-image: url("/images/faces/prince/Neutral.png");
-}
-
-article[who=prince][emotion=appalled]::before {
-  background-image: url("/images/faces/prince/Appalled.png");
-}
-
-article[who=prince][emotion=headturn]::before,
-article[who=prince][emotion=head-turn]::before,
-article[who=prince][emotion=head_turn]::before {
-  background-image: url("/images/faces/prince/Head_Turn.png");
-}
-
-article[who=prince][emotion=down]::before,
-article[who=prince][emotion=lookdown]::before,
-article[who=prince][emotion=look-down]::before,
-article[who=prince][emotion=look_down]::before {
-  background-image: url("/images/faces/prince/Look_Down.png");
-}
-
-article[who=prince][emotion=look]::before {
-  background-image: url("/images/faces/prince/Look.png");
-}
-
-article[who=prince][emotion=neutral]::before {
-  background-image: url("/images/faces/prince/Neutral.png");
-}
-
-/* tem */
-
-article[who=tem]::before {
-  background-image: url("/images/faces/tem/Neutral.png");
-}
-
-article[who=tem][emotion=down]::before,
-article[who=tem][emotion=lookdown]::before,
-article[who=tem][emotion=look-down]::before,
-article[who=tem][emotion=look_down]::before {
-  background-image: url("/images/faces/tem/Look_Down.png");
-}
-
-article[who=tem][emotion=neutral]::before {
-  background-image: url("/images/faces/tem/Neutral.png");
-}
-
-/* tigertaur */
-
-article[who=tigertaur]::before {
-  background-image: url("/images/faces/tigertaur/Neutral.png");
-}
-
-article[who=tigertaur][emotion=grin]::before {
-  background-image: url("/images/faces/tigertaur/Grin.png");
-}
-
-article[who=tigertaur][emotion=neutral]::before {
-  background-image: url("/images/faces/tigertaur/Neutral.png");
-}
-
-/* woof */
-
-article[who=woof]::before {
-  background-image: url("/images/faces/woof/Awake.png");
-}
-
-article[who=woof][emotion=awake]::before {
-  background-image: url("/images/faces/woof/Awake.png");
-}
-
-article[who=woof][emotion=knockedout]::before,
-article[who=woof][emotion=knocked-out]::before,
-article[who=woof][emotion=knocked_out]::before {
-  background-image: url("/images/faces/woof/KnockedOut.png");
-}
-
-article[who=woof][emotion=look]::before {
-  background-image: url("/images/faces/woof/Look.png");
-}
-
-article[who=woof][emotion=sleep]::before {
-  background-image: url("/images/faces/woof/Sleep.png");
-}
-
-/* yoki */
-
-article[who=yoki]::before {
-  background-image: url("/images/faces/yoki/Neutral.png");
-}
-
-article[who=yoki][emotion=annoyed]::before {
-  background-image: url("/images/faces/yoki/Annoyed.png");
-}
-
-article[who=yoki][emotion=disheartened]::before {
-  background-image: url("/images/faces/yoki/Disheartened.png");
-}
-
-article[who=yoki][emotion=dizzy]::before {
-  background-image: url("/images/faces/yoki/Dizzy.png");
-}
-
-article[who=yoki][emotion=look]::before {
-  background-image: url("/images/faces/yoki/Look.png");
-}
-
-article[who=yoki][emotion=meditative]::before {
-  background-image: url("/images/faces/yoki/Meditative.png");
-}
-
-article[who=yoki][emotion=neutral]::before {
-  background-image: url("/images/faces/yoki/Neutral.png");
-}
-
-article[who=yoki][emotion=smile]::before {
-  background-image: url("/images/faces/yoki/Smile.png");
-}
-
-article[who=yoki][emotion=surprised]::before {
-  background-image: url("/images/faces/yoki/Surprised.png");
-}
-
-article[who=yoki][emotion=sweat-drop]::before,
-article[who=yoki][emotion=sweat_drop]::before {
-  background-image: url("/images/faces/yoki/Sweat_Drop.png");
-}
-
-article[who=yoki][emotion=think]::before {
-  background-image: url("/images/faces/yoki/Think.png");
-}
-
-article[who=yoki][emotion=unsure-smile]::before,
-article[who=yoki][emotion=unsure_smile]::before {
-  background-image: url("/images/faces/yoki/Unsure_Smile.png");
-}
-
-article[who=yoki][emotion=unsure]::before {
-  background-image: url("/images/faces/yoki/Unsure.png");
-}
-
-article[who=yoki][emotion=upset]::before {
-  background-image: url("/images/faces/yoki/Upset.png");
-}
-
-/* younger yoki */
-
-article[who=youngeryoki]::before {
-  background-image: url("/images/faces/youngeryoki/Neutral.png");
-}
-
-article[who=youngeryoki][emotion=concern]::before {
-  background-image: url("/images/faces/youngeryoki/Concern.png");
-}
-
-article[who=youngeryoki][emotion=happy]::before {
-  background-image: url("/images/faces/youngeryoki/Happy.png");
-}
-
-article[who=youngeryoki][emotion=look]::before {
-  background-image: url("/images/faces/youngeryoki/Look.png");
-}
-
-article[who=youngeryoki][emotion=neutral]::before {
-  background-image: url("/images/faces/youngeryoki/Neutral.png");
-}
-
-article[who=youngeryoki][emotion=sigh]::before {
-  background-image: url("/images/faces/youngeryoki/Sigh.png");
-}
-
-/* zera */
-
-article[who=zera]::before {
-  background-image: url("/images/faces/zera/Neutral.png");
-}
-
-article[who=zera][emotion=look]::before {
-  background-image: url("/images/faces/zera/Look.png");
-}
-
-article[who=zera][emotion=neutral]::before {
-  background-image: url("/images/faces/zera/Neutral.png");
-}
-
-article[who=zera][emotion=pout]::before {
-  background-image: url("/images/faces/zera/Pout.png");
-}
-
-article[who=zera][emotion=smile]::before {
-  background-image: url("/images/faces/zera/Smile.png");
-}
-
-article[who=zera][emotion=sneer]::before {
-  background-image: url("/images/faces/zera/Sneer.png");
-}
+@include character-face("Zera", "Look", "Neutral", "Pout", "Smile", "Sneer");
