--- a/scss/depfaces.scss
+++ b/scss/depfaces.scss
@@ -16,7 +16,7 @@
 
 @include character-face("HarP", "Excited", "Neutral");
 
-@include many-character-faces("hero", "ChosenOne", "Cleric", "Knight", "Rogue");
+@include many-character-faces("hero", "Chosen^One", "Cleric", "Knight", "Rogue");
 
 @include character-face("Prince", "Appalled", "Head_Turn", "Look_Down", "Look", "Neutral");
 
@@ -24,7 +24,7 @@
 
 @include character-face("Tigertaur", "Grin", "Neutral");
 
-@include character-face("Woof", "Awake", "KnockedOut", "Look", "Sleep");
+@include character-face("Woof", "Awake", "Knocked^Out", "Look", "Sleep");
 
 @include character-face("Yoki",
   "Annoyed", "Disheartened", "Dizzy",
@@ -33,6 +33,6 @@
   "Unsure_Smile", "Unsure", "Upset"
 );
 
-@include character-face("YoungerYoki", "Concern", "Happy", "Look", "Neutral", "Sigh");
+@include character-face("Younger^Yoki", "Concern", "Happy", "Look", "Neutral", "Sigh");
 
 @include character-face("Zera", "Look", "Neutral", "Pout", "Smile", "Sneer");
