--- a/scss/experimental.scss
+++ b/scss/experimental.scss
@@ -127,7 +127,7 @@ article {
   cursor: default;
   
   &::selection,
-  & ::selection {
+  ::selection {
     background-color: var(--g3);
   }
   
@@ -142,6 +142,8 @@ article {
       height: 97px;
       left: 15px;
       top: 15px;
+      background-position: center;
+      background-size: 100% 100%;
     }
   }
   
