cursor pointer update for details tag

--- a/scss/experimental.scss
+++ b/scss/experimental.scss
@@ -308,6 +308,7 @@ article {
 
 details {
   @include textbox("short");
+  cursor: pointer;
   /*& summary {
     list-style: url("/images/misc/next_arrow.png");
   }
